static/css/sheets.css
/* ... */
#textPreview .previewWarn, #inlineTextPreview .previewWarn {
	color: #B94A48;
	padding: 20px;
}

#textPreview .previewWarn .btn {
	float: right;
}

#title {
	font-size: 36px;
	min-height: 40px;
	margin-bottom: 6px;
	text-align: center;
	line-height: normal;
}

#title.heTitle {
	direction: rtl;
}

#author {
	text-align: center;
	font-style: italic;
	margin-bottom: 10px;
	color: #999;
}


#via {
	font-size: 13px;
}

#bottomAuthor {
	text-align: center;
	font-style: italic;
	color: #999;
}

#bottomAuthor a, #via a {
	color: #333;
}

#bottomVia {
	font-size: 13px;
}

#sheetMetadata {
	color: #999;
	background-color: #fafafa;
	padding: 0 76px;
}

#sheet #sheetMetadata .button {
	background-color: #eee;
	border-color: #ccc;
	color: #999;
	font-size: 14px;
	margin-top: 20px;
}

#sheetMetadata summary {
	display: block;
	text-align: center;
	margin: 0 -76px;
}

#sheetMetadata summary {
	background-color: #fff;
}

#sheetMetadata summary::-webkit-details-marker {
  	display: none;
}

#sheetMetadata summary:after {
  	content: " ❯";
}
#sheetMetadata[open] summary span {
	display: none;
}
#sheetMetadata[open] summary:after {
  	content: "✕";
    top: 54px;
    margin: 0 80px;
    position: relative;
    display: flex;
    justify-content: flex-end;
}

#sheetMetadata .metadataOpenDetails {
	font-size: 14px;
	font-family: "proxima-nova","Helvetica Neue","Helvetica",sans-serif;
	padding: 35px 0;
}

#sheetMetadata #via, #sheetMetadata #assignmentAttribution {
	font-size: 14px;
	padding: 14px 0;
}

#likeLink {
	color: black;
	text-decoration: none;
}

#likes {
	display: none;
	text-align: center;
}

#s2LikeContainer {
	font-family: "proxima-nova","Helvetica Neue","Helvetica",sans-serif;
	color: #666;
	font-size:12px;
	height:26px;
	width:52px;
	border: 1px solid #ccc;
	padding: 4px 10px;
	border-radius: 3px;

}

#sheet.public #likes {
	display: block;
}

#likeInfo {
	cursor: pointer;
}

#likeInfo:hover {
	text-decoration: underline;
}

.titleSub {
	font-size: 20px;
	margin-left: 11px;
	color: #555;
}

#sources {
	font-size: 20px;
	margin: 0px;
	padding: 0px;
	list-style-type: none;
}

#sources {
	margin-top: 40px;
}

#sheet #sources .sheetItem .sourceNumber {
	display: none;
	font-size: 15px;
}

#sheet.numbered.hebrew #sources .sheetItem .sourceNumber.en {
	display: none;
}

#sheet.numbered.english #sources .sheetItem .sourceNumber.he {
	display: none;
}

#sheet.numbered #sources .sheetItem .sourceNumber {
	display: block;
}

.sheetItem {
	position: relative;
	padding: 24px 76px;
	box-sizing: border-box;
	border: solid 1px transparent;
	border-left: solid 6px transparent;
}

.sheetItem table {
	max-width:691px;
}

.sheetItem p span,
.sheetItem div.text span {
	white-space: pre-wrap;
}

.sheetItem div.text span.gemarra-regular {
	font-weight: bold;
}


#sheet #sources .sheetItem .sourceNumber.en {
	position: absolute;
	width: 50px;
	text-align: right;
	top: 35px;
	left: 6px;
}

#sheet #sources .sheetItem .sourceNumber.he {
	position: absolute;
	width: 50px;
	text-align: left;
	top: 37px;
	right: 6px;
}

#sheet .sourceControlsOpen {
	background-color: #F9F9F7;
	z-index: 2;
	border-top:solid 1px #F2F2F2;
	border-bottom:solid 1px #F2F2F2;
}

.interface-english #sourceControls {
	text-align: center;
	position: absolute;
	bottom: 7px;
	width: 300px;
	background-color: #eee;
	left: 50%;
	margin-left: -150px;
}
.interface-hebrew #sourceControls {
	text-align: center;
	position: absolute;
	bottom: 7px;
	width: 300px;
	background-color: #eee;
	right: 50%;
	margin-right: -150px;
}

.sourceControlsTop #sourceControls {
	bottom: auto;
	top: 7px;
}

#sourceControls div {
	display: inline-block;
	margin: 0 5px;
	font-size: 15px;
	cursor: pointer;
	background-color: #F9F9F7 !important;
}

#sourceControls div:hover {
	color: #08c;
	background-color: #F9F9F7 !important;

}
.interface-english #sourceControls.sideControls {
	width: auto;
	left: 23px;
	margin-left: 0;
	top: 32px;
	bottom: auto;
	background-color: inherit;
}

.interface-hebrew #sourceControls.sideControls{
	width: auto;
	right: 23px;
	margin-right: 0;
	top: 32px;
	bottom: auto;
	background-color: inherit;
}

#sourceControls.sideControls div:hover {
	color: #999;
	background-color: #F9F9F7 !important;

}

.tooltipster-default {
	background-color: #999 !important;
	color: #fff;
	margin-left:5px;
}



.sideControls div {
	display: block !important
}

.sideControls div img {
	margin: 3px 0;
}


.source {
	position: relative;
}

.source .title, .source .customTitle, .outside .title {
	font-size: 18px;
	font-weight: bold;
	display: inline-block;
	line-height: 24px;
}

.source .title {
	cursor: pointer;
	width: 100%;
	margin: 0;
}

.source .title:hover {
	text-decoration: underline;
}

.source .title a {
	color: black;
}

.source .title .ui-icon-extlink {
	vertical-align: -3px;
}

.source .customTitle {
	display: none;
	width: 100%;
	text-align: center;
}

.source .openLink {
	font-size: 13px;
	letter-spacing: 1px;
	margin: 0 12px;
	color: #222;
}

.source .openLink .ui-icon {
	display: inline-block;
}

.text {
	font-size: 19px;
	line-height: 1.3;
	position: relative;
}

.text .en,
.text .he {
	min-height: 20px;
}

#sheet .en {
	direction: ltr;
	text-align: left;
}
#sheet .he {
	direction: rtl;
	text-align: right;
	font-family: "Times New Roman", Serif;
	font-size: 24px;
}


#sheet.english .en {
	display: block;
}

#sheet.hebrew .he {
	display: block;
}

#sheet.english .he {
	display: none;
}

#sheet.hebrew .en {
	display: none;
}

#sheet.bilingual .source > .he,
#sheet.bilingual .outsideBi .he {
	display: block;
	float: right;
	width: 48%;
	position: relative;
	top: -2px;

}
#sheet.bilingual .source > .en,
#sheet.bilingual .outsideBi .en {
	display: block;
	float: left;
	width: 48%;
}

#sheet.bilingual.sideBySide.heLeft .source > .he,
#sheet.bilingual.sideBySide.heLeft .outsideBi .he {
	float: left;
}

#sheet.bilingual.sideBySide.heLeft .source > .en,
#sheet.bilingual.sideBySide.heLeft .outsideBi .en {
	float: right;
}
/* ... */

